# polars_info

./: .gitignore  LICENSE  README.md  pyproject.toml
script/: test_twine.txt
src/polars_info/: __init__.py  _formatting.py  info.py
tests/: test_formatting.py  test_info.py
