[project]
name = "polars-info"
version = "0.1.0"
description = "A tiny helper to print clean, readable info summaries for Polars DataFrames."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.38.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "twine>=6.2.0",
]
